# rano-implementation

./: .gitignore  CRITICAL_ISSUES_ANALYSIS.md  DATASET_ADAPTATION.md  DEBUG_HIFIGAN_GUIDE.md  FIXES_APPLIED.md  HOW_TO_RUN_EVALUATION.MD  RANO_KNOWLEDGE.md  README.md  README_FIXES.md  RUNPOD_GUIDE.md  RUN_ON_SSH.md  SUMMARY.md  TRAINING_SPEEDUP.md  VERIFICATION_CHECKLIST.md  _check_state.py  acg.py  adainvc.md  anonymizer.py  audio.py  bigvganTester.py  blocks.py  build_eval_set.py  build_vctk_eval.py  check_anon.py  check_intel.py  check_mel.py  condSwapTest.py  corrected_table.py  data.py  debug_restoration.py  debugtest.py  diagnose_vocoder.py  distill_ecapa.py  eval_results.json  eval_results_hifigan.json  eval_results_math_vocoder_v2.json  eval_results_pseudo_inverse.json  eval_results_pseudoinverse.json  eval_results_true_asv.json  evaluate.py  (+26 more)
.claude/: settings.local.json
.puku/: puku-embeddings.db  puku-embeddings.db-shm  puku-embeddings.db-wal
output/anon/: keys.json
output/anon_70968/: 61-70968-0000.flac  61-70968-0000.mel.pt  61-70968-0001.flac  61-70968-0001.mel.pt  61-70968-0002.flac  61-70968-0002.mel.pt  61-70968-0003.flac  61-70968-0003.mel.pt  61-70968-0004.flac  61-70968-0004.mel.pt  61-70968-0005.flac  61-70968-0005.mel.pt  61-70968-0006.flac  61-70968-0006.mel.pt  61-70968-0007.flac  61-70968-0007.mel.pt  61-70968-0008.flac  61-70968-0008.mel.pt  61-70968-0009.flac  61-70968-0009.mel.pt  61-70968-0010.flac  61-70968-0010.mel.pt  61-70968-0011.flac  61-70968-0011.mel.pt  (+103 more)
scripts/: debug_mel_vocoder.py
test_inference/: eval_results.json
(+260 files in other folders)
