[project]
name = "rano"
version = "0.1.0"
description = "Restorable Speaker Anonymization via Conditional Invertible Neural Network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "speechbrain>=0.5.16",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "einops>=0.7.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100
